[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Objects/Scale.gd" type="Script" id=1]
[ext_resource path="res://Images/Resized_Images/scale.png" type="Texture2D" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63, 33 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.5, 33 )

[node name="Scale" type="RigidBody2D" groups=["LabObjects", "Scale"]]
input_pickable = true
gravity_scale = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
draggable = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2( -2, 7 )
scale = Vector2( 0.950783, 0.950783 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
offset_left = -55.0
offset_top = 35.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
offset_right = 110.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
offset_left = 7.0
offset_top = 7.0
offset_right = 103.0
offset_bottom = 113.0

[node name="Title" type="Label" parent="Control/PanelContainer/VBoxContainer"]
offset_right = 96.0
offset_bottom = 14.0
text = "Scale"
align = 1
valign = 1

[node name="Tare_Button" type="Button" parent="Control/PanelContainer/VBoxContainer"]
offset_top = 18.0
offset_right = 96.0
offset_bottom = 38.0
text = "Tare"

[node name="Exit_Button" type="Button" parent="Control/PanelContainer/VBoxContainer"]
offset_top = 42.0
offset_right = 96.0
offset_bottom = 62.0
text = "Exit"

[node name="Weight_Value" type="Label" parent="Control/PanelContainer/VBoxContainer"]
offset_top = 66.0
offset_right = 96.0
offset_bottom = 80.0
text = "0.0"
align = 1
valign = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, 1 )
shape = SubResource( 2 )

[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/Tare_Button" to="." method="_on_Tare_Button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/Exit_Button" to="." method="_on_Exit_Button_pressed"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
